--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -33,7 +33,7 @@
              required>
     </div>
   
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Create Account
       <!-- if I don't specify route with the action attribute, the default is that it goes back to the /login url in this case -->
     </button>
   
