--- a/templates/bookmarked.html
+++ b/templates/bookmarked.html
@@ -1,1 +1,66 @@
-{{ farms }}
+{% extends 'base.html' %}
+
+{% block title %}Farms{% endblock %}
+
+
+{% block body %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            </ul>
+
+            <ul class="navbar-nav ml-auto">
+
+
+                <li class="nav-item active"></li>
+
+                <form class="form-login" method="GET" action='/logout'>
+                    <li class="nav-item active"></li>
+                    <a class="nav-link" id='signOut' href="/logout" data-target="#exampleModal">Log Out<span
+                            class="sr-only">(current)</span></a>
+                    </button>
+                </form>
+
+            </ul>
+        </div>
+</nav>
+
+<!-- put in a picture, not showing up right now.... -->
+<div class="container mt-2" id="fav-col">
+    <div class="row justify-content-center">
+        <section class="col-12 mx-auto">
+        </section>
+    </div>
+</div>
+
+
+<div class="container mt-2">
+    <div class="row justify-content-left">
+        <p>
+        <h2>Your Favorite Farms</h2>
+        </p>
+    </div>
+    <!-- make for loop and get farms in bullets + get actual links here so i can reference -->
+    <ul class="list-group list-group-flush">
+
+        {% for farm in farms %}
+        <li><a href="{{ farm.link }}" target="_blank">{{ farm.title }}</a></li>
+        {% endfor %}
+    </ul>
+
+    {% endblock %}
