--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -1,4 +1,32 @@
-</form>
+
+{% extends 'base.html' %}
+
+{% block title %}Login{% endblock %}
+
+
+{% block body %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+      </ul>
+    </div>
+</nav>
 
 <form class="form-signin" method="POST">
     <!-- the post method, once rendered, is saved (in browser memory now) -->
@@ -32,9 +60,11 @@
              placeholder="Password"
              required>
     </div>
-  
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Create Account
-      <!-- if I don't specify route with the action attribute, the default is that it goes back to the /login url in this case -->
+    
+    <button onclick="window.location.href = '/';" class="btn btn-lg btn-primary btn-block" type="submit">Create Account
+    
     </button>
   
   </form>
+  {% endblock %}
+
