--- a/templates/login.html
+++ b/templates/login.html
@@ -1,39 +1,49 @@
-<html>
-<head>
-  <title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
+{% block title %}Login{% endblock %}
+
+
+{% block body %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+      </ul>
+    </div>
+</nav>
 
 <form class="form-signin" method="POST">
-  <!-- the post method, once rendered, is saved (in browser memory now) -->
 
   <h2 class="form-signin-heading">Please Sign In If you Have An Account</h2>
 
   <div class="form-group">
     <label for="user-field" class="sr-only">User Name</label>
-    <input type="user_name"
-           name="user_name"
-           class="form-control input-lg"
-           placeholder="User Name"
-           required
-           autofocus>
+    <input type="user_name" name="user_name" class="form-control input-lg" placeholder="User Name" required autofocus>
   </div>
 
   <div class="form-group">
     <label for="password-field" class="sr-only">Password</label>
-    <input type="password"
-           name="password"
-           class="form-control input-lg"
-           placeholder="Password"
-           required>
+    <input type="password" name="password" class="form-control input-lg" placeholder="Password" required>
   </div>
 
+
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In
-    <!-- if I don't specify route with the action attribute, the default is that it goes back to the /login url in this case -->
   </button>
 
 
-</body>
-</html>
-
+  {% endblock %}
