--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -15,10 +15,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/About">About<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
       </li>
     </ul>
 
@@ -61,7 +61,7 @@
              required>
     </div>
     
-    <button onclick="window.location.href = '/';" class="btn btn-lg btn-primary btn-block" type="submit">Create Account
+    <button onclick="window.location.href = '/';" class="btn btn-outline-secondary" type="submit">Create Account
     
     </button>
   
