--- a/templates/homepage_zip.html
+++ b/templates/homepage_zip.html
@@ -1,17 +1,8 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<link rel="stylesheet" href="/static/css/maps.css" />
-<script src="/static/js/maps.js"></script>
-<script defer src='https://maps.googleapis.com/maps/api/js?key={{ GOOGLE_MAPS_KEY }}&callback=initMap'>
-</script>
-<script defer src="/static/js/showfarms.js"></script>
-<script src="/static/lib/babel-standalone.js"></script>
-<script src="/static/lib/react.development.js"></script>
-<script src="/static/lib/react-dom.development.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 {% endblock %}
-
-{% block title %}Find famrs by zip code{% endblock %}
 
 {% block body %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -23,13 +14,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="about">About<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/">home<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
       </li>
     </ul>
-
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -55,21 +45,27 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Login or create account</h5>
-                <button type="button" class="close btn-primary" data-dismiss="modal" aria-label="Close">
+                <h5 class="modal-title" id="modalLabel">Login if you have an account</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
+              <div class="modal-body">
+                Log in here please
+              </div>
               <div class="modal-footer">
                 <form class="form-login" method="GET" action='/login'>
-                  <button id='signIn' class="btn btn-outline-secondary modal-button" type="submit" name='login'
+                  <button id='signIn' class="btn btn-lg btn-primary btn-block" type="submit" name='login'
                     value='login'>Log in
                   </button>
                 </form>
               </div>
+              <div class="modal-body">
+                Create account if you don't have one
+              </div>
               <div class="modal-footer">
                 <form class="form-create-account" method="POST" action='/create_account'>
-                  <button class="btn btn-outline-secondary modal-button" type="submit" name='create-account'
+                  <button class="btn btn-lg btn-primary btn-block" type="submit" name='create-account'
                     value='create-account'>Create Account
                   </button>
                 </form>
@@ -87,45 +83,40 @@
     </div>
 </nav>
 
-<div class="container">
-<div class="row">
-  <div class="col-12 mt-2">
-  <main>
-      <div id="map"></div>
-  </main>
-  </div>
-</div>
 
-<h2 class="mt-5 mb-3">Find a farm using zip code</h2>
-<form id="additonal-location-form" method="POST">
-  <div class="form-group">
-    <div class="container-fluid">
-        Zip Code <input type="text" name="zip_code" id="zip_code_field"> within <input type="text" name="miles"
-          id="miles_field"> miles
+  <div class="container-fluid">
+    <div class="row d-flex justify-content-center">
+      <section class="col-12 mx-auto">
+        <p>Connect with nature and volunteer on a farm in the United States</p> 
+        </section>  
     </div>
   </div>
 
-  <div class="form-group">
-    <h2 class="mt-5 mb-3">Select month(s) you want to visit</h2>
-    <select multiple class="form-control" type="text" name="months" id="months_field">
-      <option value="1">January</option>
-      <option value="2">February</option>
-      <option value="3">March</option>
-      <option value="4">April</option>
-      <option value="5">May</option>
-      <option value="6">June</option>
-      <option value="7">July</option>
-      <option value="8">August</option>
-      <option value="9">September</option>
-      <option value="10">October</option>
-      <option value="11">November</option>
-      <option value="12">December</option>
-    </select>
+  <div class="row">
+    <div class="container-fluid">
+      <div class='col-8'></div>
+      <i class="fas fa-tractor"></i>
+      <b>Explore farms in the United States</b>
+    </div>
   </div>
 
-  <input type="submit" class="btn btn-light">
-</form>
+  <div class="row">
+    <div class="container-fluid">
+      <div class='col-8'></div>
+      <i class="fas fa-search-plus"></i>
+      <b>Connect with local farmers & communities and make friends</b>
+    </div>
+  </div>
 
 
-</div>
-{% endblock %}
+  </div>
+  
+  <div class="container-fluid">
+  {% if session['customer'] %}
+    <p><button class="float-left offset-1 btn btn-outline-secondary" onclick="location.href = '/current_location';" id="myButton">Continue your adventure</button></p>
+  {% else %}
+    <p><button class="float-left offset-1 btn btn-outline-secondary" onclick="location.href = '/current_location';" id="myButton">Start as a guest</button></p>
+  {% endif %}
+
+      {% endblock %}
+</html>
