--- a/templates/login.html
+++ b/templates/login.html
@@ -14,10 +14,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="about">About<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">home<span class="sr-only">(current)</span></a>
       </li>
     </ul>
 
@@ -33,17 +33,18 @@
 
   <div class="form-group">
     <label for="user-field" class="sr-only">User Name</label>
-    <input type="user_name" name="user_name" class="form-control input-lg" placeholder="User Name" required autofocus>
+    <input type="user_name" name="user_name" class="form-control" placeholder="User Name" required autofocus>
   </div>
 
   <div class="form-group">
     <label for="password-field" class="sr-only">Password</label>
-    <input type="password" name="password" class="form-control input-lg" placeholder="Password" required>
+    <input type="password" name="password" class="form-control" placeholder="Password" required>
   </div>
 
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign In
+  <button class="btn btn-outline-secondary" type="submit">Sign In
   </button>
+  </form>
 
 
   {% endblock %}
