--- a/templates/current-location.html
+++ b/templates/current-location.html
@@ -100,7 +100,7 @@
 <form id="additonal-location-form" method="POST">
   <div class="form-group">
     <div class="container-fluid">
-        Zip Code <input type="text" name="zip_code" id="zip_code_field"> within <input type="text" name="miles"
+        Zip Code <input type="text" autocomplete="off" name="zip_code" id="zip_code_field"> within <input type="text" name="miles" autocomplete="off" 
           id="miles_field"> miles
     </div>
   </div>
