--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -34,7 +34,7 @@
           </button>
         </form>
         {% else %}
-        <li class="nav-item active"></li>
+        <li class="nav-item active text-left"></li>
         <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Login<span
             class="sr-only">(current)</span></a>
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
@@ -47,16 +47,16 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-footer">
-                <form class="form-login" method="GET" action='/login'>
-                  <button id='signIn' class="btn btn-outline-secondary modal-button" type="submit" name='login'
+              <div class="modal-body">
+                <form class="form-login mb-2" method="GET" action='/login'>
+                  <button id='signIn' class="btn btn-block btn-outline-secondary modal-button" type="submit" name='login'
                     value='login'>Log in
                   </button>
                 </form>
-              </div>
-              <div class="modal-footer">
-                <form class="form-create-account" method="POST" action='/create_account'>
-                  <button class="btn btn-outline-secondary modal-button" type="submit" name='create-account'
+              
+    
+                <form class="form-create-account" method="GET" action='/create_account'>
+                  <button class="btn btn-block btn-outline-secondary modal-button" type="submit" name='create-account'
                     value='create-account'>Create Account
                   </button>
                 </form>
@@ -77,41 +77,59 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-7 mt-5 homepage_text_main">
+    <div class="col mt-5 homepage_text_main">
       <h1>Connect with nature and volunteer on a farm in the United States</h1>
 
 
 
-      <div class="row homepage_text_sub font-italic">
+      <div class="homepage_text_sub font-italic">
 
         <span>
-          <i class="fas fa-tractor ml-3 mb-3"></i>  Explore farms in the United States
+          <i class="fas fa-tractor ml-3 mb-3"></i> Explore farms in the United States
         </span>
 
       </div>
 
-      <div class="row homepage_text_sub font-italic">
+      <div class="homepage_text_sub font-italic">
         <span>
-          <i class="fas fa-search-plus ml-3 mb-3"></i>  Connect with local farmers & communities and make friends
+          <i class="fas fa-search-plus ml-3 mb-3"></i> Connect with local farmers & communities and make friends
         </span>
       </div>
     </div>
 
 
-    <div class="row homepage_background align-items-center justify-content-center">
-      <div class='col-5'>
+    <div class='col'>
+      <div class='container-fluid homepage_background align-items-center justify-content-center'>
         {% if session['customer'] %}
-        <button class="btn btn-outline-secondary homepage_button" onclick="location.href = '/current_location';"
-            id="myButton">Continue your adventure by zip</button>
-        <button class="btn btn-outline-secondary homepage_button"
-            onclick="location.href = '/current_location_state';" id="myButton">Continue your adventure by state</button>
+        <div class="row">
+          <div class="col align-items-center justify-content-center">
+            <button class="btn btn-outline-secondary homepage_button" onclick="location.href = '/current_location';"
+              id="myButton">Continue your adventure by zip</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col align-items-center justify-content-center">
+          <button class="btn btn-outline-secondary homepage_button" onclick="location.href = '/current_location_state';"
+            id="myButton">Continue your adventure by
+            state</button>
+            </div>
+        </div>
         {% else %}
-        <button class="btn btn-outline-secondary homepage_button" onclick="location.href = '/current_location';"
-            id="myButton">Start as a guest and search farms by zip</button>
-        <button class="btn btn-outline-secondary homepage_button"
-            onclick="location.href = '/current_location_state';" id="myButton">Start as a guest and search farms by state</button>
+        <div class="row">
+          <div class="col align-items-center justify-content-center">
+            <button class="btn btn-outline-secondary homepage_button" onclick="location.href = '/current_location';"
+          id="myButton">Start as a guest and search farms by zip</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col align-items-center justify-content-center">
+            <button class="btn btn-outline-secondary homepage_button" onclick="location.href = '/current_location_state';"
+            id="myButton">Start as a guest and search farms by state</button>
+            </div>
+        </div>
         {% endif %}
       </div>
     </div>
+  </div>
 </div>
-  {% endblock %}
+{% endblock %}
